@@ -1,7 +1,7 @@
 Persons that don't actually wait for trains - a story
 ========================
 
-This the beginning of an exercise I did for a
+This is the beginning of an exercise I did for a
 [FutureLearn course on writing fiction](https://www.futurelearn.com/courses/start-writing-fiction/). 
 
 But this file is actually just a filler to make tests have a slightly
