@@ -6,5 +6,3 @@ Pascagoula
 umpirators
 FutureLearn
 futurelearn
-https
-www
